Fix words in chat box wrapping around part-way through the word

--- a/client/src/components/game/gui/panels/chat/ChatLine.scss
+++ b/client/src/components/game/gui/panels/chat/ChatLine.scss
@@ -1,7 +1,7 @@
 .chat-line {
-  word-break: break-all;
+  word-break: break-word;
+  white-space: pre-line;
   margin: 0;
-  //color: #6ebbd1;
   color: white;
 
   .display-name {
